[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/roboto.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/server_listener.tscn" type="PackedScene" id=2]
[ext_resource path="res://code/server_browser.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "searching_for_servers"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Searching for servers", "Searching for servers.", "Searching for servers..", "Searching for servers..." ]
}

[node name="server_browser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 162.0
margin_right = -96.0
margin_bottom = -54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manual_setup" type="Button" parent="background_panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -473.0
margin_top = -175.0
margin_right = -30.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 1 )
text = "Manual setup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_back" type="Button" parent="background_panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -170.0
margin_right = 473.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 1 )
text = "Go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip_text_edit" type="LineEdit" parent="background_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -403.0
margin_top = -243.0
margin_right = 403.0
margin_bottom = -138.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="type_in_server_ip" type="Label" parent="background_panel/server_ip_text_edit"]
anchor_right = 1.0
margin_top = -105.0
custom_fonts/font = ExtResource( 1 )
text = "Type in server IP"
align = 1
valign = 1

[node name="join_server" type="Button" parent="background_panel/server_ip_text_edit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.5
margin_top = 94.5
margin_right = 221.5
margin_bottom = 239.5
custom_fonts/font = ExtResource( 1 )
text = "Join server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="background_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 40.0
margin_right = -70.0
margin_bottom = -175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="searching_for_servers" type="Label" parent="background_panel/VBoxContainer"]
margin_right = 1588.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = ExtResource( 1 )
text = "Searching for servers.."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="background_panel/VBoxContainer/searching_for_servers"]
autoplay = "searching_for_servers"
playback_speed = 0.5
anims/searching_for_servers = SubResource( 1 )

[node name="server_browser_label" type="Label" parent="background_panel"]
anchor_right = 1.0
margin_top = -176.0
custom_fonts/font = ExtResource( 1 )
text = "Server Browser"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_listener" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="background_panel/manual_setup" to="." method="_on_manual_setup_pressed"]
[connection signal="pressed" from="background_panel/go_back" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="background_panel/server_ip_text_edit/join_server" to="." method="_on_join_server_pressed"]
[connection signal="new_server" from="server_listener" to="." method="_on_server_listener_new_server"]
[connection signal="remove_server" from="server_listener" to="." method="_on_server_listener_remove_server"]
